# ghe_transcribe

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.ipynb  config.json  environment.yml  example.ipynb  example.py  ghe_transcribe.py  package.json  packages.json  postBuild  pyproject.toml  requirements.in  requirements.txt  ruff.toml  script.ipynb  script.py  utils.py
.buildpacks/: pyproject.toml
.github/workflows/: ci-uv.yml  ci.yml  docker-build.yml  python-app.yml  release.yml  releases.yml  ruff.yml
docs/: DEVELOPMENT.md  INSTALLATION.md  RESEARCH.md  renkulab.md
example/: example.csv  example.md
ghe_transcribe/: core.py  utils.py
media/: test02.m4a  testing_audio_02.m4a
output/: test01.srt  test02.srt  test02.txt  testing_audio.csv  testing_audio.md  testing_audio.srt  testing_audio.txt  testing_audio_01.md  testing_audio_02.csv  testing_audio_02.md  testing_audio_02.srt  testing_audio_02_snippet.csv  testing_audio_02_snippet.md  testing_audio_20_seconds.csv  testing_audio_20_seconds.srt  testing_audio_snippet.csv  testing_audio_snippet.md
pyannote/: pyannote_config_huggingface.yaml
src/ghe_transcribe/: _version.py  app.py  core.py  exceptions.py  utils.py
src/ghe_transcribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audio_conversion.py  test_core.py  test_local.py
